# 02_todo_app

./: .gitignore  CLAUDE.md  HACKATHON.md  nextjs-16.skill  openai-agents-sdk.skill  vercel.json
.claude/agents/: backend-architect.md  frontend-developer.md
.claude/commands/: sp.constitution.md
.claude/skills/: openai-agents-sdk.skill
.specify/memory/: constitution.md
phase-1-console/: README.md  pyproject.toml
phase-1-console/src/todo/: __init__.py  cli.py  manager.py  models.py
phase-1-console/tests/: __init__.py  test_cli.py  test_manager.py  test_models.py
phase-2-web/: README.md
phase-2-web/backend/: .env.example  .gitignore  CLAUDE.md  README.md  deps.txt  pyproject.toml  requirements.txt  test.db  todo.db
phase-2-web/backend/src/: auth.py  config.py  db.py  main.py
phase-2-web/backend/src/api/: __init__.py  auth.py  tasks.py
phase-2-web/backend/src/api/routers/: tasks.py
phase-2-web/backend/src/crud/: task.py
phase-2-web/backend/src/models/: __init__.py  task.py  user.py
phase-2-web/frontend/: .env.example  CLAUDE.md  README.md  middleware.ts  package-lock.json  package.json
phase-3-chatbot/: .gitkeep  README.md
phase-4-kubernetes/: .gitkeep  README.md
phase-5-cloud/: .gitkeep  README.md
specs/001-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-todo/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-web-todo-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-better-auth-integration/: data-model.md  plan.md  research.md  (+3 more)
(+111 files in other folders)
