[project]
name = "todo"
version = "0.1.0"
description = "Phase I In-Memory Console Todo Application"
requires-python = ">=3.13"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]

[dependency-groups]
dev = ["pytest>=8.0"]
